modify new/old to old/new for hf pipeline

--- a/html/1_hf_thead.html
+++ b/html/1_hf_thead.html
@@ -4,7 +4,7 @@
       <th rowspan="2">Model</th>
       <th colspan="3">target</th>
       <th colspan="3">refer</th>
-      <th colspan="2">ratio new/old</th>
+      <th colspan="2">ratio old/new</th>
     </tr>
     <tr style="text-align: right;">
       <th>target Eager latency</th>
@@ -13,7 +13,7 @@
       <th>refer Eager latency</th>
       <th>refer Compile latency</th>
       <th>refer Eager/Compile ratio</th>
-      <th>Eager ratio new/old</th>
-      <th>Compile ratio new/old</th>
+      <th>Eager ratio old/new</th>
+      <th>Compile ratio old/new</th>
     </tr>
   </thead>
