use 'Torch.compile vs. eager Speedup' to replace 'eager/compile latency'

--- a/html/1_hf_thead.html
+++ b/html/1_hf_thead.html
@@ -9,10 +9,10 @@
     <tr style="text-align: right;">
       <th>target Eager latency</th>
       <th>target Compile latency</th>
-      <th>target Eager/Compile ratio</th>
+      <th>target Torch.compile vs. eager Speedup</th>
       <th>refer Eager latency</th>
       <th>refer Compile latency</th>
-      <th>refer Eager/Compile ratio</th>
+      <th>refer Torch.compile vs. eager Speedup</th>
       <th>Eager ratio old/new</th>
       <th>Compile ratio old/new</th>
     </tr>
