modify ccr-registry to gar-registry

--- a/scripts/modelbench/inductor_perf_regression.html
+++ b/scripts/modelbench/inductor_perf_regression.html
@@ -279,7 +279,7 @@
     </tr>
   </tbody>
 </table>
-<p>image: docker pull ccr-registry.caas.intel.com/pytorch/pt_inductor:2023_10_23_aws</p>
+<p>image: docker pull gar-registry.caas.intel.com/pytorch/pt_inductor:2023_10_23_aws</p>
 
 <p>Repro</p>
 <a href=https://github.com/chuanqi129/inductor-tools/blob/yudong/aws_auto/scripts/modelbench/inductor_single_run.sh>
